Update OpenAPI definitions and endpoint tags AB#244065
- Changed endpoint tags from "s100" to "private" or "public" for better categorization.
- Updated `InjectionExtensions` to change token retrieval operation tag from "auth" to "public".
